k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nuage-identity
  labels:
    name: nuage-identity
    app: iam
