k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iam-api
  namespace: nuage-identity
  labels:
    app: iam-api
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: iam-api
